[project]
name = "agent-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.14",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "opentelemetry-sdk>=1.34.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "uvicorn>=0.34.3",
]
